--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "cloudinary": "^1.23.0",
+    "into-stream": "^6.0.0",
     "knex": "<0.20.0",
     "sqlite3": "latest",
     "strapi": "3.0.0-beta.20.3",
@@ -21,6 +23,7 @@
     "strapi-plugin-email": "3.0.0-beta.20.3",
     "strapi-plugin-upload": "3.0.0-beta.20.3",
     "strapi-plugin-users-permissions": "3.0.0-beta.20.3",
+    "strapi-provider-upload-cloudinary": "^3.2.0-beta.1",
     "strapi-utils": "3.0.0-beta.20.3"
   },
   "author": {
